TestProject/src/objects/Salary_Details__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <description>Mandatory</description>
        <label>Bank Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <description>Mandatory</description>
        <label>Bank Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic__c</fullName>
        <description>Mandatory</description>
        <label>Basic</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credited_to__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Salaries details</relationshipLabel>
        <relationshipName>Salaries_details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gross_Salary__c</fullName>
        <formula>total_earnings__c  -  PF_Deduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRA__c</fullName>
        <description>Mandatory</description>
        <label>HRA</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mode_Of_Payment__c</fullName>
        <label>Mode Of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>RTGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Deduction__c</fullName>
        <description>Mandatory</description>
        <label>PF Deduction</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary_Credit_Date__c</fullName>
        <description>Mandatory</description>
        <label>Salary Credit Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Allowance__c</fullName>
        <description>Mandatory</description>
        <label>Special Allowance</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_earnings__c</fullName>
        <formula>Basic__c  +  HRA__c   + Special_Allowance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>total earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Salary Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SAL-{000000}</displayFormat>
        <label>Salary Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salaries details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Bank_Details_not_null</fullName>
        <active>true</active>
        <description>Error mesg if Bank details are null</description>
        <errorConditionFormula>LEN( Bank_Details__c ) = 0</errorConditionFormula>
        <errorDisplayField>Bank_Details__c</errorDisplayField>
        <errorMessage>Bank Details cannot be null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Basic_not_less_than_4000</fullName>
        <active>true</active>
        <description>Error if basic is less than 4000</description>
        <errorConditionFormula>IF( Basic__c &lt;4000,true,false )</errorConditionFormula>
        <errorDisplayField>Basic__c</errorDisplayField>
        <errorMessage>Basic salary cannot be less than 4000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>bank_Accountno_validation</fullName>
        <active>true</active>
        <description>cannot change the account number</description>
        <errorConditionFormula>ISCHANGED( Bank_Account_Number__c )</errorConditionFormula>
        <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
        <errorMessage>Bank Account number cannot be changed</errorMessage>
    </validationRules>
</CustomObject>